// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: rgba(0,0,0,0.80);
  border-width: 1px;
  border-color: #D3D3D3;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFFFFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: rgba(0,0,0,0.80);
  background: #FFFFFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="text"
  width="100%"
>
  <styled.input
    disabled={false}
    type="text"
    width="100%"
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            Object {
              "name": [Function],
              "type": [Function],
            },
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: block;
  width: ",
              [Function],
              ";
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: ",
              [Function],
              ";
  font-size: 1rem;
  color: ",
              [Function],
              ";
  border-width: 1px;
  border-color: ",
              [Function],
              ";
  border-style: solid;
  border-radius: 0.125rem;
  background-color: ",
              [Function],
              ";
  background-image: none;
  outline-width: 0;
  user-select: text;

  &:disabled {
    color: ",
              [Function],
              ";
    background: ",
              [Function],
              ";
    cursor: not-allowed;
  }

  &::placeholder {
    color: ",
              [Function],
              ";
    font-size: 0.875rem;
  }
",
            ],
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="text"
      width="100%"
    >
      <input
        className="c0"
        disabled={false}
        type="text"
        width="100%"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`Input should render correctly with disabled 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: rgba(0,0,0,0.80);
  border-width: 1px;
  border-color: #D3D3D3;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFFFFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: rgba(0,0,0,0.80);
  background: #FFFFFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

<Input
  disabled={true}
  type="text"
  width="100%"
>
  <styled.input
    disabled={true}
    type="text"
    width="100%"
  >
    <StyledComponent
      disabled={true}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            Object {
              "name": [Function],
              "type": [Function],
            },
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: block;
  width: ",
              [Function],
              ";
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: ",
              [Function],
              ";
  font-size: 1rem;
  color: ",
              [Function],
              ";
  border-width: 1px;
  border-color: ",
              [Function],
              ";
  border-style: solid;
  border-radius: 0.125rem;
  background-color: ",
              [Function],
              ";
  background-image: none;
  outline-width: 0;
  user-select: text;

  &:disabled {
    color: ",
              [Function],
              ";
    background: ",
              [Function],
              ";
    cursor: not-allowed;
  }

  &::placeholder {
    color: ",
              [Function],
              ";
    font-size: 0.875rem;
  }
",
            ],
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="text"
      width="100%"
    >
      <input
        className="c0"
        disabled={true}
        type="text"
        width="100%"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`Input should render correctly with type 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: rgba(0,0,0,0.80);
  border-width: 1px;
  border-color: #D3D3D3;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFFFFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: rgba(0,0,0,0.80);
  background: #FFFFFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="password"
  width="100%"
>
  <styled.input
    disabled={false}
    type="password"
    width="100%"
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            Object {
              "name": [Function],
              "type": [Function],
            },
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: block;
  width: ",
              [Function],
              ";
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: ",
              [Function],
              ";
  font-size: 1rem;
  color: ",
              [Function],
              ";
  border-width: 1px;
  border-color: ",
              [Function],
              ";
  border-style: solid;
  border-radius: 0.125rem;
  background-color: ",
              [Function],
              ";
  background-image: none;
  outline-width: 0;
  user-select: text;

  &:disabled {
    color: ",
              [Function],
              ";
    background: ",
              [Function],
              ";
    cursor: not-allowed;
  }

  &::placeholder {
    color: ",
              [Function],
              ";
    font-size: 0.875rem;
  }
",
            ],
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="password"
      width="100%"
    >
      <input
        className="c0"
        disabled={false}
        type="password"
        width="100%"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;

exports[`Input should render correctly with width 1`] = `
.c0 {
  display: block;
  width: 200px;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  color: rgba(0,0,0,0.80);
  border-width: 1px;
  border-color: #D3D3D3;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFFFFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  color: rgba(0,0,0,0.80);
  background: #FFFFFF;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::-moz-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0:-ms-input-placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

.c0::placeholder {
  color: rgba(0,0,0,0.40);
  font-size: 0.875rem;
}

<Input
  disabled={false}
  type="text"
  width="200px"
>
  <styled.input
    disabled={false}
    type="text"
    width="200px"
  >
    <StyledComponent
      disabled={false}
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            Object {
              "name": [Function],
              "type": [Function],
            },
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  display: block;
  width: ",
              [Function],
              ";
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: ",
              [Function],
              ";
  font-size: 1rem;
  color: ",
              [Function],
              ";
  border-width: 1px;
  border-color: ",
              [Function],
              ";
  border-style: solid;
  border-radius: 0.125rem;
  background-color: ",
              [Function],
              ";
  background-image: none;
  outline-width: 0;
  user-select: text;

  &:disabled {
    color: ",
              [Function],
              ";
    background: ",
              [Function],
              ";
    cursor: not-allowed;
  }

  &::placeholder {
    color: ",
              [Function],
              ";
    font-size: 0.875rem;
  }
",
            ],
          },
          "displayName": "styled.input",
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="text"
      width="200px"
    >
      <input
        className="c0"
        disabled={false}
        type="text"
        width="200px"
      />
    </StyledComponent>
  </styled.input>
</Input>
`;
